# kontur

./: AGENT.md  AGENTS.md  Cargo.toml  scaffolding-prompt.md  tmmpr-ai-generated-overview.md
src/: actions.rs  binding.rs  geometry.rs  labels.rs  main.rs  path.rs  prop_panel.rs  scene_save.rs  screen_space.rs  state.rs  update.rs  viewport.rs
src/ui/: mod.rs  props.rs  save_modal.rs  status_bar.rs  text_export.rs
